# 2023-codelab-rust

./: LICENSE  README.md
docs/home lab/: HomeLAB - rust - 03-2023.pptx
docs/setup/: prepare-computer-for-event.md
docs/starter lab/: Codelab - rust - 03-2023.pptx
project/: features.md
release/: README.md
release/le_juste_prix/: Cargo.toml
release/le_juste_prix/src/: main.rs
release/rpass/: Cargo.toml  runner.md
release/rpass/src/: cli.rs  console_utils.rs  constants.rs  crypto.rs  data_store.rs  main.rs  middleware.rs  passwords.rs
starter_lab/le_juste_prix/src/: main.rs
starter_lab/rpass/: Cargo.toml
starter_lab/rpass/src/: cli.rs  crypto.rs  data_store.rs  main.rs  middleware.rs  passwords.rs  utils.rs
