[package]
name = "rpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.0"
chrono = {version = "0.4.23", features = ["serde"]}
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
rust-argon2 = "1.0"
dirs = "4.0.0"
thiserror = "1.0.38"
base64 = "0.21.0"
clap = { version = "4.1.4", features = ["derive"] }
inquire = { version = "0.5.3", features = ["date"] }
console = "0.15.5"
indicatif = "0.17.3"
comfy-table = "6.1.4"
zxcvbn = "2"
